fix package import structure
Direct pytest to the package root directory, which is src, not src/pick.

Update test_pick.py to import directly from the package's module, not from the package's exports.

With this config pytest and VSC pylance works OOTB.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
 ]
 
 [project.scripts]
+# define a script command named "pick" based on the main function the pick module in the pick pakage
 "pick" = "pick.pick:main"
 
 [tool.uv]
@@ -19,6 +20,6 @@ dev-dependencies = [
 package = true
 
 [tool.pytest.ini_options]
-pythonpath = ["src/pick"]
+pythonpath = ["src"]
 
 
